<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="5dip"
            android:paddingRight="5dip">

        <TextView
                android:layout_width="100dip"
                android:layout_height="wrap_content"
                android:text="@string/detail_type"/>

        <EditText
                android:id="@+id/text_edit_type"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"/>

    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="5dip"
            android:paddingRight="5dip">
        <TextView
                android:layout_width="100dip"
                android:layout_height="wrap_content"
                android:text="@string/detail_lecturer"/>
        <EditText
                android:id="@+id/text_edit_lecturer"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"/>
    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="5dip"
            android:paddingRight="5dip">
        <TextView
                android:layout_width="100dip"
                android:layout_height="wrap_content"
                android:text="@string/detail_room"/>
        <EditText
                android:id="@+id/text_edit_room"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"/>
    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="5dip"
            android:paddingRight="5dip">
        <TextView
                android:layout_width="100dip"
                android:layout_height="wrap_content"
                android:text="@string/detail_time_date"/>
        <EditText
                android:id="@+id/text_edit_date"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="date"/>
    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="5dip"
            android:paddingRight="5dip">
        <TextView
                android:layout_width="100dip"
                android:layout_height="wrap_content"
                android:text="@string/detail_time_start"/>
        <EditText
                android:id="@+id/text_edit_start"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="datetime"/>
    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="5dip"
            android:paddingRight="5dip">
        <TextView
                android:layout_width="100dip"
                android:layout_height="wrap_content"
                android:text="@string/detail_time_end"/>
        <EditText
                android:id="@+id/text_edit_end"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="datetime"/>
    </LinearLayout>
</LinearLayout>
