<?xml version="1.0" encoding="utf-8"?>

<!-- Copyright 2012 Marc Prengemann

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License. -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">

    <LinearLayout
            android:id="@+id/group_detail_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="5dip"
            android:paddingRight="5dip">

        <TextView
                android:layout_width="100dip"
                android:layout_height="wrap_content"
                android:text="@string/detail_title"/>

        <TextView
                android:id="@+id/text_subject_title"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
            android:id="@+id/group_detail_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="5dip"
            android:paddingRight="5dip">

        <TextView
                android:layout_width="100dip"
                android:layout_height="wrap_content"
                android:text="@string/detail_type"/>

        <TextView
                android:id="@+id/text_subject_type"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
            android:id="@+id/group_detail_lecturer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="5dip"
            android:paddingRight="5dip">

        <TextView
                android:layout_width="100dip"
                android:layout_height="wrap_content"
                android:text="@string/detail_lecturer"/>

        <TextView
                android:id="@+id/text_subject_lecturer"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
            android:id="@+id/group_detail_room"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="5dip"
            android:paddingRight="5dip">

        <TextView
                android:layout_width="100dip"
                android:layout_height="wrap_content"
                android:text="@string/detail_room"/>

        <TextView
                android:id="@+id/text_subject_room"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
            android:id="@+id/group_detail_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="5dip"
            android:paddingRight="5dip">

        <TextView
                android:layout_width="100dip"
                android:layout_height="wrap_content"
                android:text="@string/detail_time"/>

        <TextView
                android:id="@+id/text_subject_time"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"/>
    </LinearLayout>


    <LinearLayout
            android:id="@+id/group_detail_list"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


        <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical">

            <ListView
                    android:id="@+id/list_subject_events"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/black">
            </ListView>

            <TextView
                    android:id="@+id/text_subject_events_empty"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:text="@string/text_no_subjects_in_time"/>
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>